Trying to fix spacing.

--- a/public/blog-style.css
+++ b/public/blog-style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #000000;
     color: rgb(0, 0, 0);
-    font-family: "director-devanagari", sans-serif;
+    font-family: "pf-videotext", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
@@ -104,7 +104,7 @@ footer {
 .author-container {
     display: flex;
     align-items: center;
-    margin-top: 10px;  /* Ensures the container is 10 pixels below the title */
+    margin-top: 0px;  /* Ensures the container is 10 pixels below the title */
     background-color: rgb(0, 0, 0);  /* Surrounds the container with a white box */
     border-radius: 20px;  /* Rounds the corners with a radius of 20 pixels */
     padding: 5px 15px 5px 5px;  /* Adds some padding inside the white box */
