--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,7 @@ body,
 html {
   margin: 0;
   padding: 0;
-  font-family: "director-devanagari", sans-serif;
+  font-family: "pf-videotext", sans-serif;
   font-weight: 400;
   font-style: normal;
   height: 100vh;
